--- a/roboshop/frontend.yml
+++ b/roboshop/frontend.yml
@@ -4,5 +4,5 @@ metadata:
   name: frontend
 spec:
   containers:
-    - name: Frontend
+    - name: frontend
       image: 529080510656.dkr.ecr.us-east-1.amazonaws.com/frontend:2.0.0
