--- a/roboshop/catalogue.yml
+++ b/roboshop/catalogue.yml
@@ -2,7 +2,21 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: catalogue
+  labels:
+    component: catalogue
 spec:
   containers:
     - name: catalogue
       image: 529080510656.dkr.ecr.us-east-1.amazonaws.com/catalogue:2.0.0
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: catalogue
+spec:
+  selector:
+    component: catalogue
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
